# daoPayment

./: .env.example  .gitignore  .prettierignore  README.md  build.js  eslint.config.js  foundry.toml  next.config.js  next.config.mjs  package-lock.json  package.json  pyproject.toml  skills-lock.json  tailwind.config.ts  tsconfig.cli.json  tsconfig.json  vite.config.ts
app/: I18nClientLayout.tsx  WagmiProvider.tsx  cli.py  globals.css  layout.tsx  main.py  metadata.ts  page.tsx  providers.tsx
audit-records/: audit-1775968996607-w57d8sv67.json  audit-1775969121992-bx1xy8jh7.json  audit-1775969546140-my3wfn39m.json
components/: AuditList.tsx  BudgetManager.tsx  ConnectButton.tsx  LanguageSwitcher.tsx  MonadLogo.tsx  PendingTransactionsList.tsx  PolicyManager.tsx  WalletManager.tsx  WhitelistManager.tsx
config/: riskConfig.json
contracts/: foundry.toml
docs/: .gitignore-optimization-retrospective-20260412.md  MCP-INTEGRATION.md  Monad Agent 原生安全支付系统.md  RETROSPECTIVE.md  X402-INTEGRATION.md  functional-description.md  non-custodial-wallet.md  plan.md  project-retrospective-20260412.md  project-retrospective.md
examples/: agent-connection-test.ts  e2e-test.ts  performance-test.ts  x402-demo.ts
i18n/: context.tsx  index.ts  types.ts
policies/: agent-test-policy.json  allow-all-correct.json  allow-all.json  allow-any.json  allow-test.json  audit-test.json  default-allow.json  final-test.json  perf-test-1775969546122.json  permissive.json  simple-allow.json  template-default-1775977804795.json  template-default-1775977850498.json  test-policy-1775981459916.json  (+5 more)
(+194 files in other folders)
