[project]
name = "daoPayment"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Bot", email = "bot@example.com"},
]
dependencies = ["fastapi>=0.135.3", "uvicorn>=0.44.0", "web3>=7.15.0", "typer>=0.24.1", "mcp>=1.27.0", "pydantic>=2.12.5"]
requires-python = "==3.14.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
